// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhaseForm component should render a form to update an old phase, hence with a disabled menu for module 1`] = `
<div
  className="phase-form"
>
  <div
    className="date-picker-field"
  >
    <div
      className="date-picker-type"
    >
      <Translate
        value="search.datefilter.from"
      />
    </div>
    <label
      className="datepicker-label"
      htmlFor="start-datepicker"
    >
      <DatePicker
        allowSameDay={false}
        className=""
        dateFormat="LLL"
        dateFormatCalendar="MMMM YYYY"
        disabled={false}
        disabledKeyboardNavigation={false}
        dropdownMode="scroll"
        id="start-datepicker"
        locale="fr"
        monthsShown={1}
        onBlur={[Function]}
        onChange={[MockFunction]}
        onClickOutside={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMonthChange={[Function]}
        onSelect={[Function]}
        onYearChange={[Function]}
        placeholderText="Phase 1's start date"
        preventOpenOnFocus={false}
        selected={"2014-12-31T09:00:00.000Z"}
        shouldCloseOnSelect={true}
        showTimeSelect={true}
        timeCaption="Time"
        timeFormat="HH:mm"
        timeIntervals={30}
        withPortal={false}
      />
      <div
        className="icon-schedule-container"
      >
        <span
          className="assembl-icon-schedule grey"
        />
      </div>
    </label>
  </div>
  <div
    className="date-picker-field"
  >
    <div
      className="date-picker-type"
    >
      <Translate
        value="search.datefilter.to"
      />
    </div>
    <label
      className="datepicker-label"
      htmlFor="end-datepicker"
    >
      <DatePicker
        allowSameDay={false}
        className=""
        dateFormat="LLL"
        dateFormatCalendar="MMMM YYYY"
        disabled={false}
        disabledKeyboardNavigation={false}
        dropdownMode="scroll"
        id="end-datepicker"
        locale="fr"
        monthsShown={1}
        onBlur={[Function]}
        onChange={[MockFunction]}
        onClickOutside={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMonthChange={[Function]}
        onSelect={[Function]}
        onYearChange={[Function]}
        placeholderText="Phase 1's end date"
        preventOpenOnFocus={false}
        selected={"2015-12-31T09:00:00.000Z"}
        shouldCloseOnSelect={true}
        showTimeSelect={true}
        timeCaption="Time"
        timeFormat="HH:mm"
        timeIntervals={30}
        withPortal={false}
      />
      <div
        className="icon-schedule-container"
      >
        <span
          className="assembl-icon-schedule grey"
        />
      </div>
    </label>
  </div>
  <div
    className="module-selection-text"
  >
    <Translate
      value="administration.timelineAdmin.phaseModule"
    />
  </div>
  <div
    className="margin-m"
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="moduleSelectionTooltip"
          placement="right"
        >
          <Translate
            value="administration.timelineAdmin.moduleSelectionTooltip"
          />
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <div>
        <SplitButton
          className="admin-dropdown"
          disabled={true}
          id="dropdown-1234"
          onSelect={[MockFunction]}
          title="Survey module"
        >
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            divider={false}
            eventKey="survey"
            header={false}
          >
            Survey module
          </MenuItem>
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            divider={false}
            eventKey="thread"
            header={false}
          >
            Thread module
          </MenuItem>
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            divider={false}
            eventKey="multiColumns"
            header={false}
          >
            Multi-columns module
          </MenuItem>
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            divider={false}
            eventKey="voteSession"
            header={false}
          >
            Vote module
          </MenuItem>
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            divider={false}
            eventKey="brightMirror"
            header={false}
          >
            Bright Mirror module
          </MenuItem>
        </SplitButton>
      </div>
    </OverlayTrigger>
  </div>
  <div
    className="text-xs configure-module-text"
  >
    <Translate
      value="administration.timelineAdmin.configureModule"
    />
    <Link
      className="configure-module-link"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/\${slug}/administration/survey?phaseId=1234&section=1"
    >
      <Translate
        count={1}
        value="administration.timelineAdmin.configureModuleLink"
      />
    </Link>
  </div>
</div>
`;

exports[`PhaseForm component should render a form to update the dates and module of a new phase 1`] = `
<div
  className="phase-form"
>
  <div
    className="date-picker-field"
  >
    <div
      className="date-picker-type"
    >
      <Translate
        value="search.datefilter.from"
      />
    </div>
    <label
      className="datepicker-label"
      htmlFor="start-datepicker"
    >
      <DatePicker
        allowSameDay={false}
        className=""
        dateFormat="LLL"
        dateFormatCalendar="MMMM YYYY"
        disabled={false}
        disabledKeyboardNavigation={false}
        dropdownMode="scroll"
        id="start-datepicker"
        locale="fr"
        monthsShown={1}
        onBlur={[Function]}
        onChange={[MockFunction]}
        onClickOutside={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMonthChange={[Function]}
        onSelect={[Function]}
        onYearChange={[Function]}
        placeholderText="Phase 1's start date"
        preventOpenOnFocus={false}
        selected={"2014-12-31T09:00:00.000Z"}
        shouldCloseOnSelect={true}
        showTimeSelect={true}
        timeCaption="Time"
        timeFormat="HH:mm"
        timeIntervals={30}
        withPortal={false}
      />
      <div
        className="icon-schedule-container"
      >
        <span
          className="assembl-icon-schedule grey"
        />
      </div>
    </label>
  </div>
  <div
    className="date-picker-field"
  >
    <div
      className="date-picker-type"
    >
      <Translate
        value="search.datefilter.to"
      />
    </div>
    <label
      className="datepicker-label"
      htmlFor="end-datepicker"
    >
      <DatePicker
        allowSameDay={false}
        className=""
        dateFormat="LLL"
        dateFormatCalendar="MMMM YYYY"
        disabled={false}
        disabledKeyboardNavigation={false}
        dropdownMode="scroll"
        id="end-datepicker"
        locale="fr"
        monthsShown={1}
        onBlur={[Function]}
        onChange={[MockFunction]}
        onClickOutside={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMonthChange={[Function]}
        onSelect={[Function]}
        onYearChange={[Function]}
        placeholderText="Phase 1's end date"
        preventOpenOnFocus={false}
        selected={"2015-12-31T09:00:00.000Z"}
        shouldCloseOnSelect={true}
        showTimeSelect={true}
        timeCaption="Time"
        timeFormat="HH:mm"
        timeIntervals={30}
        withPortal={false}
      />
      <div
        className="icon-schedule-container"
      >
        <span
          className="assembl-icon-schedule grey"
        />
      </div>
    </label>
  </div>
  <div
    className="module-selection-text"
  >
    <Translate
      value="administration.timelineAdmin.phaseModule"
    />
  </div>
  <div
    className="margin-m"
  >
    <SplitButton
      className="admin-dropdown"
      disabled={false}
      id="dropdown-1234"
      onSelect={[MockFunction]}
      title="Survey module"
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey="survey"
        header={false}
      >
        Survey module
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey="thread"
        header={false}
      >
        Thread module
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey="multiColumns"
        header={false}
      >
        Multi-columns module
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey="voteSession"
        header={false}
      >
        Vote module
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey="brightMirror"
        header={false}
      >
        Bright Mirror module
      </MenuItem>
    </SplitButton>
  </div>
  <div
    className="text-xs configure-module-text"
  >
    <Translate
      value="administration.timelineAdmin.configureModule"
    />
    <Link
      className="configure-module-link"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/\${slug}/administration/survey?phaseId=1234&section=1"
    >
      <Translate
        count={1}
        value="administration.timelineAdmin.configureModuleLink"
      />
    </Link>
  </div>
</div>
`;
